# rush-hour-solana

./: .gitignore  README.MD
front/: package.json  tsconfig.json
front/src/: types.ts
front/src/app/: layout.tsx  page.tsx  providers.tsx
front/src/app/_components/card/: index.tsx
front/src/app/_components/form/: actions.ts  solve.tsx
front/src/app/_components/wallet-connect/: index.tsx
front/src/lib/: api.ts  env.ts  mappers.ts  schemas.ts
solver/: Cargo.toml  keypair.json
solver/src/: game.rs  lib.rs  main.rs
solver/src/game/: game.rs  mod.rs
validator/: Cargo.toml
validator/src/: main.rs  test.txt
