[package]
name = "rush_solver_solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="rush_solver_solana"
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.4.0"
get-size = "0.1.4"
solana-program = "1.18.11"
